--- a/lista_tarefas/android/local.properties
+++ b/lista_tarefas/android/local.properties
@@ -1,3 +1,5 @@
-sdk.dir=/Users/dhciolfi/Library/Android/sdk
-flutter.sdk=/Users/dhciolfi/Documents/flutter
-flutter.buildMode=debug
+sdk.dir=C:\\Users\\Gustavo Teixeira\\AppData\\Local\\Android\\sdk
+flutter.sdk=D:\\Flutter\\flutter
+flutter.buildMode=release
+flutter.versionName=1.0.0
+flutter.versionCode=1
